// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channels reducer should handle SET_CHANNELS 1`] = `
Array [
  Object {
    "created": "2018-09-07T13:53:10.632115Z",
    "favorited": null,
    "grapecallUrl": "https://uebergrape.staging.chatgrape.com/call/8991",
    "groupMentions": 0,
    "icon": "https://staging.chatgrape.com/imgsrc/s/avatar/200x200/",
    "id": 8991,
    "lastMessageTime": "2019-11-21T21:35:04.976779+00:00",
    "mentions": 0,
    "partner": Object {
      "avatar": "https://staging.chatgrape.com/imgsrc/s/avatar/200x200/",
      "displayName": "ajv13028",
      "email": "ajv13028@ssdfd.com",
      "hideEmailField": false,
      "id": 2918,
      "pm": null,
      "status": 16,
      "type": "user",
      "username": "ajv13028",
    },
    "type": "pm",
    "unread": 0,
  },
  Object {
    "abbr": "TC",
    "color": "#97A6BD",
    "created": "2018-01-29T17:41:34.196044Z",
    "creator": 2918,
    "description": "Test Channel",
    "favorited": null,
    "groupMentions": 0,
    "icon": "phone",
    "id": 6009,
    "isEncrypted": false,
    "isManaged": false,
    "isPublic": true,
    "lastMessageTime": "2019-11-21T21:34:19.853846+00:00",
    "mentions": 0,
    "name": "Test Channel",
    "notifyRoom": true,
    "referenceLabel": null,
    "referenceUrl": null,
    "serializerClass": "OverviewSerializer",
    "slug": "test-channel",
    "type": "room",
    "unread": 0,
  },
]
`;

exports[`channels reducer should handle correct merge channels on SET_CHANNELS 1`] = `
Array [
  Object {
    "abbr": "TC",
    "color": "#97A6BD",
    "created": "2018-01-29T17:41:34.196044Z",
    "creator": 2918,
    "description": "Test Channel",
    "favorited": null,
    "groupMentions": 0,
    "icon": "phone",
    "id": 6009,
    "isEncrypted": false,
    "isManaged": false,
    "isPublic": true,
    "lastMessageTime": "2019-11-21T21:34:19.853846+00:00",
    "mentions": 0,
    "name": "Test Channel",
    "notifyRoom": true,
    "referenceLabel": null,
    "referenceUrl": null,
    "serializerClass": "OverviewSerializer",
    "slug": "test-channel",
    "type": "room",
    "unread": 0,
  },
  Object {
    "created": "2018-09-07T13:53:10.632115Z",
    "favorited": null,
    "grapecallUrl": "https://uebergrape.staging.chatgrape.com/call/8991",
    "groupMentions": 0,
    "icon": "https://staging.chatgrape.com/imgsrc/s/avatar/200x200/",
    "id": 8991,
    "lastMessageTime": "2019-11-21T21:35:04.976779+00:00",
    "mentions": 0,
    "partner": Object {
      "avatar": "https://staging.chatgrape.com/imgsrc/s/avatar/200x200/",
      "displayName": "ajv13028",
      "email": "ajv13028@ssdfd.com",
      "hideEmailField": false,
      "id": 2918,
      "pm": null,
      "status": 16,
      "type": "user",
      "username": "ajv13028",
    },
    "type": "pm",
    "unread": 0,
  },
  Object {
    "created": "2017-12-21T12:34:09.811121Z",
    "favorited": null,
    "grapecallUrl": "https://uebergrape.staging.chatgrape.com/call/3860",
    "groupMentions": 0,
    "icon": "https://staging.chatgrape.com/imgsrc/s/avatar/200x200/",
    "id": 3860,
    "lastMessageTime": "2019-11-18T15:31:23.462546+00:00",
    "mentions": 0,
    "partner": Object {
      "avatar": "https://staging.chatgrape.com/imgsrc/s/avatar/200x200/",
      "displayName": "ajv13028",
      "email": "ajv13028@soioa.com",
      "hideEmailField": false,
      "id": 2674,
      "pm": null,
      "status": 4,
      "type": "user",
      "username": "",
    },
    "type": "pm",
    "unread": 0,
  },
]
`;

exports[`channels reducer should handle correct update unread field on UPDATE_CHANNEL_UNREAD_COUNTER 1`] = `
Array [
  Object {
    "unread": 1,
  },
]
`;

exports[`channels reducer should return same state if channel not found on UPDATE_CHANNEL_UNREAD_COUNTER 1`] = `
Array [
  Object {
    "id": 3338,
    "unread": 1,
  },
]
`;
